--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "fastify": "^4.10.2",
+    "firebase": "^9.14.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
