--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "fastify": "^4.10.2",
+    "fastify-firebase": "^1.0.3",
+    "fastify-swagger": "^5.2.0",
+    "fastify-vite": "^3.0.0-beta.27",
+    "fastify-vite-vue": "^3.0.0-beta.3",
     "firebase": "^9.14.0",
+    "undici": "^5.13.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -25,6 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "nodemon": "^2.0.20",
     "prettier": "^2.4.1"
   }
 }
