--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "fastify": "^4.10.2",
     "fastify-firebase": "^1.0.3",
@@ -16,10 +17,13 @@
     "fastify-vite": "^3.0.0-beta.27",
     "fastify-vite-vue": "^3.0.0-beta.3",
     "firebase": "^9.14.0",
+    "roboto-fontface": "*",
     "undici": "^5.13.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,6 +37,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "nodemon": "^2.0.20",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
 }
