--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
     "fastify": "^4.10.2",
     "fastify-firebase": "^1.0.3",
