--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@mdi/font": "5.9.55",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "fastify": "^4.10.2",
     "fastify-firebase": "^1.0.3",
