--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "dev": "nodemon src/server.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
@@ -15,12 +14,9 @@
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "fastify": "^4.10.2",
-    "fastify-firebase": "^1.0.3",
     "fastify-swagger": "^5.2.0",
     "fastify-vite": "^3.0.0-beta.27",
     "fastify-vite-vue": "^3.0.0-beta.3",
-    "firebase": "^9.14.0",
     "roboto-fontface": "*",
     "undici": "^5.13.0",
     "uuid": "^9.0.0",
@@ -40,7 +36,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "nodemon": "^2.0.20",
     "prettier": "^2.4.1",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
