--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "@fastify/cors": "^8.2.0",
     "fastify": "^4.10.2",
     "fastify-firebase": "^1.0.3",
-    "firebase": "^9.14.0"
+    "fastify-jwt": "^4.2.0",
+    "fastify-plugin": "^4.4.0",
+    "firebase": "^9.14.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
